--- a/quests/vertex-ai/vertex-challenge-lab/vertex-challenge-lab.ipynb
+++ b/quests/vertex-ai/vertex-challenge-lab/vertex-challenge-lab.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6822904",
+   "id": "202e02c9",
    "metadata": {},
    "source": [
     "**NOTE: Make sure you have installed the required packages for the lab as specified in the Task 2 > step 3 of the lab instructions.**"
@@ -89,7 +89,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6e0feaf4-9849-4636-b736-d3cd8a051579",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Add installed library dependencies to Python PATH variable.\n",
@@ -101,7 +103,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f68df5dd-c456-4edd-8f58-71597f10c0ae",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Retrieve and set PROJECT_ID and REGION environment variables.\n",
@@ -114,7 +118,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a3912f9-6c12-439f-8613-cc60c286b3ee",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO: Create a globally unique Google Cloud Storage bucket for artifact storage.\n",
@@ -125,7 +131,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4931ae91-3ba1-437a-9c37-187a41a3d227",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!gsutil mb -l $REGION $GCS_BUCKET"
@@ -143,7 +151,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0bf558fc-d0fc-4452-8281-7d7cd0cffe50",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -190,7 +200,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3a43371e-2c64-4a76-8698-fa768043dbdd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "vertexai.init(project=PROJECT_ID, location=REGION, staging_bucket=GCS_BUCKET)"
@@ -240,7 +252,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2ee70d2c-c0e3-4c75-9bc6-b42dad6c7267",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "DATA_URL = \"https://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\"\n",
@@ -251,7 +265,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c889f275-ce52-4108-9f7f-7cf824184f88",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def download_data(data_url, local_data_dir):\n",
@@ -287,7 +303,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "98f906a4-64a0-45ae-b376-757ef0f661fc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "DATASET_DIR = download_data(data_url=DATA_URL, local_data_dir=LOCAL_DATA_DIR)"
@@ -297,7 +315,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d95a61fa-cf55-470f-9837-c783c4bcccf8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Create a dictionary to iteratively add data pipeline and model training hyperparameters.\n",
@@ -313,7 +333,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9aeea425-d288-44a7-9958-f2b1f48f9c34",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def load_datasets(dataset_dir, hparams):\n",
@@ -351,7 +373,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8ff05aa4-d299-4c80-a29a-43c6bc3ac152",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "raw_train_ds, raw_val_ds, raw_test_ds = load_datasets(DATASET_DIR, HPARAMS)"
@@ -361,7 +385,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50ee40c0-9e37-483c-98f5-dcdb467a2bfc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "AUTOTUNE = tf.data.AUTOTUNE\n",
@@ -384,7 +410,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d794068-817c-4cb8-8e4c-c49860d0c92d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "for text_batch, label_batch in train_ds.take(1):\n",
@@ -432,7 +460,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "22196658-1c30-49c7-8485-5d933fc8988e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "HPARAMS.update({\n",
@@ -470,7 +500,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2b634139-a0d1-41e7-be23-c6e580a4f0e6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "HPARAMS.update({\n",
@@ -485,7 +517,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4e415aeb-5ab2-42ac-904a-ae0649d45a2e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "epochs = HPARAMS['epochs']\n",
@@ -521,7 +555,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "289da96f-2aad-4c34-85ce-5916ea98778e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def build_text_classifier(hparams, optimizer):\n",
@@ -563,7 +599,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "036b72cc-9e1c-49c9-8a90-7b09b6108f3d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "model = build_text_classifier(HPARAMS, OPTIMIZER)"
@@ -573,7 +611,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f8198df2-c15a-4f79-a154-83c941aba5f3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Visualize your fine-tuned BERT sentiment classifier.\n",
@@ -584,7 +624,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "acfeb71d-4e19-4759-8f5c-293c8c7cee1c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "TEST_REVIEW = ['this is such an amazing movie!']"
@@ -594,7 +636,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d1c2112f-9f04-470e-8636-38ea948cba9d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "BERT_RAW_RESULT = model(tf.constant(TEST_REVIEW))\n",
@@ -613,7 +657,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f1f008fc-f696-4b71-9011-2a897d268795",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "HPARAMS.update({\n",
@@ -635,7 +681,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24660956-d60a-4c25-a654-7b192a01a2d5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def train_evaluate(hparams):\n",
@@ -692,7 +740,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f59cab23-fbf0-44d2-9ee0-e2dd83390fa5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "history = train_evaluate(HPARAMS)"
@@ -702,7 +752,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "91980420-8451-4869-b189-2b3693131ff8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "history_dict = history.history\n",
@@ -795,7 +847,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0129184d-15ed-4ebe-bbdc-6c2687eb18cf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "MODEL_DIR = \"bert-sentiment-classifier\""
@@ -805,7 +859,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2594afe7-b9e0-4957-9156-d2e595fde62f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%writefile {MODEL_DIR}/trainer/model.py\n",
@@ -975,7 +1031,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "17517e0b-a2ac-489a-bf03-357ace5d6577",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%writefile {MODEL_DIR}/trainer/task.py\n",
@@ -1028,7 +1086,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b86ede10-6372-4320-89d3-264d4d1b1ca1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%writefile {MODEL_DIR}/Dockerfile\n",
@@ -1079,7 +1139,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fe7619e1-fff9-4a47-90a8-3ba9b55e74c7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "%%writefile {MODEL_DIR}/requirements.txt\n",
@@ -1122,7 +1184,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f9918475-f6dc-4fa3-8249-47976e68f529",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "ARTIFACT_REGISTRY=\"bert-sentiment-classifier\""
@@ -1132,7 +1196,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "93d9566d-c6c4-48c8-b4f8-ad239e5ae349",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO: create a Docker Artifact Registry using the gcloud CLI. Note the required 'repository-format', 'location' and 'description' flags while creating the Artifact Registry.\n",
@@ -1155,7 +1221,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b580619d-957c-409f-ac15-ccbc0bb79a57",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "IMAGE_NAME=\"bert-sentiment-classifier\"\n",
@@ -1167,7 +1235,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "24790970-988e-4694-b8cd-a2d9d500c11b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cloudbuild_yaml = f\"\"\"steps:\n",
@@ -1200,7 +1270,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3ebf0093-d66e-49c1-8a55-047020735e60",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO: use Cloud Build to build and submit your custom model container to your Artifact Registry.\n",
@@ -1230,7 +1302,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "aef0e36b-3cb8-4660-bbb1-a5dcca49aebe",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import datetime\n",
@@ -1243,14 +1317,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c95f7070-d6e5-47ab-a860-d6a7e7892164",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "TIMESTAMP=datetime.datetime.now().strftime('%Y%m%d%H%M%S')\n",
     "DISPLAY_NAME = \"bert-sentiment-{}\".format(TIMESTAMP)\n",
     "GCS_BASE_OUTPUT_DIR= f\"{GCS_BUCKET}/{MODEL_DIR}-{TIMESTAMP}\"\n",
     "\n",
-    "USER = \"QUICKGCPLAB\"  # TODO: change this to your name.\n",
+    "USER = \"quickgcplab\"  # TODO: change this to your name.\n",
     "PIPELINE_ROOT = \"{}/pipeline_root/{}\".format(GCS_BUCKET, USER)\n",
     "\n",
     "print(f\"Model display name: {DISPLAY_NAME}\")\n",
@@ -1262,7 +1338,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f4aecd42-c969-4ce0-a49a-9150c45a91e2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Pre-built Vertex model serving container for deployment.\n",
@@ -1288,7 +1366,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d2181f3d-10cd-49c8-8e2f-e5c314940321",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "@dsl.pipeline(name=\"bert-sentiment-classification\", pipeline_root=PIPELINE_ROOT)\n",
@@ -1358,7 +1438,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "eb28dac2-3721-4fe6-9e01-98745b0d1aba",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from kfp.v2 import compiler"
@@ -1368,7 +1450,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "77355b83-577b-4831-9862-91e08e974256",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "compiler.Compiler().compile(\n",
@@ -1398,7 +1482,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f276575d-c2ba-4d08-9a2a-b7583af27aee",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "vertex_pipelines_job = vertexai.pipeline_jobs.PipelineJob(\n",
@@ -1420,7 +1506,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f0ab35e9-207c-49ea-8a27-6e6cddce8541",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "vertex_pipelines_job.run()"
@@ -1454,7 +1542,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bf80748b-8907-4ad6-8adb-d4c394752257",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Retrieve your deployed Endpoint name from your pipeline.\n",
@@ -1465,7 +1555,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c67c989d-1026-4f57-8dac-dafad01145a8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#TODO: Generate online predictions using your Vertex Endpoint. \n",
@@ -1486,7 +1578,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "97759f45-e060-44ce-87fc-4d34c4b8cadf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#TODO: write a movie review to test your model e.g. \"The Dark Knight is the best Batman movie!\"\n",
@@ -1497,7 +1591,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "71c008ce-90ad-4709-a24f-36b414c779e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# TODO: use your Endpoint to return prediction for your 'test_review' using 'endpoint.predict()' method.\n",
@@ -1508,7 +1604,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "54751a3e-7b2a-4ab8-b642-6533df27de82",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "print(prediction)"
@@ -1518,7 +1616,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c4a4c68e-a937-44f8-b64a-cbe9e607cb90",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Use a sigmoid function to compress your model output between 0 and 1. For binary classification, a threshold of 0.5 is typically applied\n",
